--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "valid-url": "^1.0.9"
   },
   "license": "MIT"
 }
